# wasm-llama-bitcoin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  emmake-llama-lib.sh  emmake.sh  make-llama-lib.sh  make.sh  wasm-llama-bitcoin.code-workspace
src/cpp/emscripten/: em-llama-cpp.hpp  em-main.cpp  em-main.h  em-sample-class.hpp
src/cpp/native/: llama-cpp.hpp  main.cpp  sample-class.hpp
